# Glenda-filesystem

./: .gitignore  README.md
extfs/: Cargo.toml
extfs/src/: block.rs  fs.rs  layout.rs  main.rs  ops.rs  server.rs
extfs/src/defs/: ext4.rs
extfs/src/versions/: ext2.rs  ext3.rs  ext4.rs  mod.rs
fatfs/: Cargo.toml
fatfs/src/: block.rs  defs.rs  fs.rs  layout.rs  main.rs  ops.rs  server.rs
fatfs/src/versions/: exfat.rs  fat16.rs  fat32.rs  mod.rs
initrdfs/: Cargo.toml
initrdfs/src/: fs.rs  layout.rs  main.rs  server.rs
